@@ -32,10 +32,10 @@
     where there is a script \code{seboundsnlmrtx.R} that computes the \code{nls()} 
     standard errors for comparison on a simple problem. 
 
-    Issue: The display includes the singular values of the Jacobian. These are 
-    displayed, one per coefficient row, with the coefficients. However, the Jacobian
-    singular values do NOT have a direct correspondence to the coefficients on whose
-    display row they appear. It simply happens that there are as many Jacobian 
+    Issue: The printsum() of this object includes the singular values of the Jacobian. 
+    These are displayed, one per coefficient row, with the coefficients. However, the 
+    Jacobian singular values do NOT have a direct correspondence to the coefficients 
+    on whose display row they appear. It simply happens that there are as many Jacobian 
     singular values as coefficients, and this is a convenient place to display them.
     The same issue applies to the gradient components.
 
